[package]
name = "tokio-sctp"
version = "0.1.0"
authors = ["Jeff Lai <jeff@oxio.io>"]
edition = "2021"
description = "tokio SCTP socket bindings"
license = "MIT"
keywords = ["tokio", "sctp", "async", "socket"]
repository = "https://github.com/jefftt/tokio-sctp"

[dependencies]
bitflags = "1"
bytes = "1"
libc = { version = "0.2", features = ["extra_traits"] }
socket2 = "0.4"
tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4"

[[example]]
name = "echo"
